# agent-control-plane

./: .env.example  .gitignore  DELIVERY.md  Makefile  README.md  pyproject.toml
agents/: code_reviewer.yaml  oncall_triage.yaml
blog/: agent_control_plane_design.md
demo/: README.md  expected_outcomes.json  fake_cluster.py  mock_loki_server.py  mock_vm_server.py  oncall_agent.py  run_demo.sh
demo/scenarios/: 01_cpu_spike.json  02_silent_fail.json  03_goodhart_inflation.json  04_irreversible_temptation.json
docs/: AGENT_AUTHOR_GUIDE.md  ARCHITECTURE.md  INVARIANTS.md  OPERATOR_RUNBOOK.md  THREAT_MODEL.md
evidence/: wave1_complete.md  wave2a_complete.md  wave2b_complete.md  wave2c_complete.md  wave3_complete.md  wave4a_complete.md  wave4b_complete.md  wave4c_complete.md  wave5a_complete.md  wave5b_complete.md  wave5c_complete.md
planning/: MASTER_PLAN.md  plan_A_sre_pragmatist.md  plan_B_ai_native.md  plan_C_adversarial.md
src/acp/: cli.py  clock.py  crypto.py  db.py  errors.py  ids.py  server.py  settings.py
tests/: conftest.py
tests/adversarial/: conftest.py  test_A01_outcome_lying.py  test_A02_synthetic_data.py  test_A03_tier_leak.py  test_A04_event_store_isolation.py  test_A05_idempotency_collision.py  test_A06_action_token_binding.py  test_A07_egress_dlp.py  test_A08_prompt_injection.py  test_A09_judge_manipulation.py  test_A10_budget_burst.py  test_A11_chain_tamper.py  test_A12_eval_awareness.py
tests/integration/: conftest.py  test_e2e_goodhart.py  test_e2e_happy_path.py  test_e2e_irreversible.py  test_e2e_silent_fail.py
tests/unit/: test_cli.py  (+29 more)
(+79 files in other folders)
