[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp"
version = "0.1.0"
description = "Agent Control Plane — 7-layer governance for autonomous agents"
requires-python = ">=3.11"
authors = [{ name = "Rui Shao" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "typer>=0.9",
    "structlog>=24.1",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "cbor2>=5.6",
]

[project.optional-dependencies]
llm = ["anthropic>=0.25", "openai>=1.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "freezegun>=1.4",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "pyright>=1.1.360",
]

[project.scripts]
acp = "acp.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
acp = ["events/migrations/*.sql", "human/templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
